Passed Initial Test

--- a/src/main/Plugin.Label.MarkDown/Plugin.Label.MarkDown.csproj
+++ b/src/main/Plugin.Label.MarkDown/Plugin.Label.MarkDown.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="LabelMarkdown.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
