--- a/src/main/Plugin.Label.MarkDown/Plugin.Label.MarkDown.csproj
+++ b/src/main/Plugin.Label.MarkDown/Plugin.Label.MarkDown.csproj
@@ -5,14 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Toolkit.Parsers" Version="5.1.1" />
-    <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
+    <None Remove="README.md" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="LabelMarkdown.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
+    <PackageReference Include="Microsoft.Toolkit.Parsers" Version="5.1.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
   </ItemGroup>
 
 </Project>
