--- a/src/sample/Sample.LabelMarkdown/Sample.LabelMarkdown.iOS/Sample.LabelMarkdown.iOS.csproj
+++ b/src/sample/Sample.LabelMarkdown/Sample.LabelMarkdown.iOS/Sample.LabelMarkdown.iOS.csproj
@@ -48,6 +48,8 @@
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+    <MtouchLink>None</MtouchLink>
+    <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
