--- a/src/main/Plugin.Label.MarkDown/Plugin.Label.MarkDown.csproj
+++ b/src/main/Plugin.Label.MarkDown/Plugin.Label.MarkDown.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>1.0.7.0</AssemblyVersion>
-    <FileVersion>1.0.7.0</FileVersion>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Toolkit.Parsers" Version="5.1.1" />
-    <PackageReference Include="Xamarin.Forms" Version="4.1.0.709244" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
   </ItemGroup>
 
 </Project>
