--- a/src/maui/MdLabel/MdLabel/MdLabel.csproj
+++ b/src/maui/MdLabel/MdLabel/MdLabel.csproj
@@ -21,4 +21,8 @@
 	  <PackageReference Include="Markdig" Version="0.30.2" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Handler\" />
+	</ItemGroup>
+
 </Project>
