--- a/src/test/mauiDemo/MdLabelDemo/MdLabelDemo.csproj
+++ b/src/test/mauiDemo/MdLabelDemo/MdLabelDemo.csproj
@@ -8,6 +8,7 @@
 		<OutputType>Exe</OutputType>
 		<RootNamespace>MdLabelDemo</RootNamespace>
 		<UseMaui>true</UseMaui>
+		<Nullable>enable</Nullable>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 
