--- a/src/maui/MdLabel/MdLabel/MdLabel.csproj
+++ b/src/maui/MdLabel/MdLabel/MdLabel.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
+		<targetframeworks>net6.0;net6.0-android;net6.0-ios;net6.0-maccatalyst</targetframeworks>
+		<!--<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>-->
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net6.0-tizen</TargetFrameworks> -->
@@ -23,15 +24,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Handler\" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <EditorConfigFiles Remove="V:\GitHub\plugin.label.markdown\src\maui\MdLabel\MdLabel\Renderer\.editorconfig" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <None Include="V:\GitHub\plugin.label.markdown\src\maui\MdLabel\MdLabel\Renderer\.editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Platforms\Tizen\" />
 	</ItemGroup>
 
 </Project>
