--- a/src/maui/MdLabel/MdLabel/MdLabel.csproj
+++ b/src/maui/MdLabel/MdLabel/MdLabel.csproj
@@ -35,4 +35,10 @@
 	  <Folder Include="Platforms\Tizen\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="MarkdownView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
