--- a/src/maui/MdLabel/MdLabel/MdLabel.csproj
+++ b/src/maui/MdLabel/MdLabel/MdLabel.csproj
@@ -39,4 +39,10 @@
 	  <Folder Include="Platforms\Windows\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Styles\Markdown.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
